package com.unsw.tilegame.entities.enemy;

/**
 * how enemy will be hurt
 * @author cecilia xifei ni
 * @version 2.4
 * @since 1.4
 */
public interface HurtBehaviour {
    public void hurt(int amt);
}
